# ly-watchdog

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  scrape.yml
app/: __init__.py  config.py  database.py  main.py
app/api/v1/: activity_reports.py  attendance.py  bills.py  committees.py  interpellations.py  legislators.py  router.py  search.py  votes.py
app/models/: __init__.py  activity_report.py  attendance.py  base.py  bill.py  committee_membership.py  interpellation.py  legislator.py  vote.py
app/schemas/: __init__.py  activity_report.py  attendance.py  bill.py  committee_membership.py  interpellation.py  legislator.py  vote.py
docs/: data-model.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/bills/: inner.tsx  page.tsx
frontend/src/app/legislators/: page.tsx
frontend/src/app/legislators/[name]/: page.tsx
frontend/src/app/search/: inner.tsx  page.tsx
frontend/src/app/speeches/: inner.tsx  page.tsx
frontend/src/components/: Footer.tsx  Navbar.tsx  PartyBadge.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: api.ts
migrations/: env.py
migrations/versions/: 2026_04_21_0001-initial_legislators.py  2026_04_23_0002-attendance.py  2026_04_24_0003-votes.py  2026_04_24_0004-bills.py  2026_04_24_0005-interpellations.py  2026_05_10_0006-committee_memberships.py  2026_05_10_0007-activity_reports.py  2026_05_10_0008-trgm_indexes.py
scrapers/: __init__.py  activity_reports.py  attendance.py  bills.py  committees.py  interpellations.py  legislators.py  upsert.py  votes.py
scripts/: verify_bitemporal.py
tests/: conftest.py  test_activity_reports.py  test_attendance.py  test_bills.py  test_bitemporal_query.py  test_committees.py  test_health.py  test_interpellations.py  test_legislator_scraper.py  test_votes.py
tests/fixtures/: activity_reports.json  attendance_term11_s1.json  bills_term11_s1.json  committees_term11_s1.json  interpellations_term11_s1.json  legislators_term11.json  votes_term11_s1.json
